tests/src/frontend/typechecking/invalid/variance_extend_4.sk
class Foo<+T> extends Bar<T> {}
base class Bar<T>{}
